ci: fix e2e uses

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Test STDOUT
         id: test-stdout
-        uses: ./
+        uses: ovsds/run-with-output@{ github.ref }
         with:
           run: |
             echo "test"
