--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Test STDOUT
         id: test-stdout
-        uses: ovsds/run-with-output@{ github.ref }
+        uses: ovsds/run-with-output-action@${{ github.ref_name  }}
         with:
           run: |
             echo "test"
