refactor: move main.sh to root

--- a/action.yaml
+++ b/action.yaml
@@ -21,7 +21,7 @@ runs:
     - name: Run
       id: run
       shell: bash
-      run: src/main.sh
+      run: ${{ github.action_path }}/src/main.sh
       env:
         COMMAND: ${{ inputs.run }}
 
