--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -65,10 +65,12 @@ tasks:
         --overwrite-if-exists
         --output-dir ../
         {{.TEMPLATE_PATH}}
-        project_name="Run with Output Action"
-        marketplace_name="Run with Output"
-        action_type="composite"
-        node_version="v20.15.1"
-        github_owner="ovsds"
+        project_name='Run with Output Action'
+        project_slug='run-with-output-action'
+        marketplace_name='Run with Output'
+        action_type='composite'
+        node_version='v20.15.1'
+        owner_name='Dmitry Ovsiannikov'
+        owner_github_login='ovsds'
     vars:
       TEMPLATE_PATH: '{{.TEMPLATE_PATH | default "https://github.com/ovsds/template-repository-github-action"}}'
